tests/init_state/ref_obligations/drop_of_ref_with_unfulfilled_obligation.err.expected
error: at 7:5: [INIT-RefObligationUnfulfilled] In function 'f', block 'entry': reference 'r' has unfulfilled obligation: pointee is uninitialized, but must be initialized before the reference expires
   |
 2 | # errors because obligation not fulfilled.
 3 | fn f(r: &mut i64) {
   |      ----------- reference declared here
 4 |   x: i64;
   |
   | ...
   |
 6 |     x = move r.*;
 7 |     drop r;
   |     ^^^^^^
 8 |     return
   |
